--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: √÷¿Á∞Ê
+  name: Choi Jaekyeong
   tagline: Developer
   #date_format: "%b %-d, %Y"
-  date_format: "%Y %m %-d"
+  date_format: "%Y %b %-d"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
   dark_mode: true # set to true to add dark mode toggle
